signal processing status working for test

--- a/force-app/main/default/classes/vy_EventHandler.cls
+++ b/force-app/main/default/classes/vy_EventHandler.cls
@@ -6,15 +6,18 @@ public class vy_EventHandler implements vy_ExceptionParent {
     // primary processor for incoming Events
 
     public static void process ( List < Vyuha_Event__e > events ) {
+        vy_Signal.debugOutput ( 'vy_EventHandler::process', 'events', events );
         // create Signals for each Event
         for ( Vyuha_Event__e event : events ) {
-            vy_Signal signal = (vy_Signal) JSON.deserialize( event.Data__c, vy_Signal.class );
+            vy_Signal signal = (vy_Signal) JSON.deserialize ( event.Data__c, vy_Signal.class );
+            vy_Signal.debugOutput ( 'vy_EventHandler::process', 'signal', signal );
             signal.initialize ();
             signal.process ();
         }
     }
 
     public static void create ( vy_Signal signal ) {
+        vy_Signal.debugOutput ( 'vy_EventHandler::create', 'signal', signal );
         String jsonStr = JSON.serialize( signal );
         Vyuha_Event__e event = new Vyuha_Event__e ();
         event.data__c = jsonStr;
@@ -27,6 +30,7 @@ public class vy_EventHandler implements vy_ExceptionParent {
             // handle exception
             throw new vy_Exception ( new vy_EventHandler (), 'create event failed' );
         }
+        vy_Signal.debugOutput ( 'vy_EventHandler::create', 'event', event );
     }
 
     public string className () {
