--- a/force-app/main/default/classes/vy_Integrated_TEST.cls
+++ b/force-app/main/default/classes/vy_Integrated_TEST.cls
@@ -1,5 +1,13 @@
-public with sharing class vy_Integrated_TEST {
-    public vy_Integrated_TEST() {
+// Integrated Tests - running end to end tests
 
+@isTest
+private class vy_Integrated_TEST {
+
+    @isTest
+    private static void formation_complete () {
+
+        // create a formation
+
+        // use the Test 
     }
 }
