fixed forceignore problem, added Invocable apex

--- a/force-app/main/default/classes/vy_Tests.cls
+++ b/force-app/main/default/classes/vy_Tests.cls
@@ -146,6 +146,47 @@ public class vy_Tests {
         List < Vyuha_Log__c > logs = [ SELECT Id, Apex_Job_Id__c, Flow_Interview_Name__c, Formation_Name__c, Status__c, Message__c, Message_Long__c FROM Vyuha_Log__c ];
         System.debug ( 'logs ===> ' + logs );
     }
+
+    @isTest
+    static void onDemandInvocable () {
+        integer testSize = 10;
+        List < Contact > testContacts = new List < Contact > ();
+        for ( integer i = 0; i < testSize; i++ ) {
+            Contact c = new Contact ();
+            c.lastName = 'oldValue';
+            testContacts.add ( c );
+        }
+        insert testContacts;
+
+        String jobName = 'Test On Demand';
+        String flowInterviewName = 'Vyuha_On_Demand_Test';
+        String targetObject = 'Contact';
+        String fieldName = 'LastName';
+        String fieldValue = 'oldvalue';
+        Integer batchSize = 25;
+
+        Test.startTest ();
+        vy_OnDemandInvocable.Parameters params = new vy_OnDemandInvocable.Parameters ();
+        params.flowApiName = flowInterviewName;
+        params.targetObject = targetObject;
+        params.filterFieldApiName = fieldName;
+        params.filterValue = fieldValue;
+        params.onDemandName = jobName;
+        params.batchSize = batchSize;
+        params.notificationEmail = null;
+        List < vy_OnDemandInvocable.Parameters > paramList = new List < vy_OnDemandInvocable.Parameters > ();
+        paramList.add ( params );
+        vy_OnDemandInvocable.invocableMethod ( paramList );
+        Test.stopTest ();
+
+        // query contacts
+        testContacts = [ SELECT ID, LastName FROM Contact ];
+
+        for ( Contact c : testContacts ) {
+            System.assertEquals ( 'Vyuha', c.LastName );
+        }
+
+    }
     
 }
 
